--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,8 @@
     },
     {
       "src": "backend/app/server.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": { "runtime": "python3.11" }
     }
   ],
   "rewrites": [
