--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,38 +1,68 @@
-# Dependencies
+# --- Frontend (Node/Vite) ---
 node_modules/
-/.pnp
+.pnp
 .pnp.js
+dist/
+build/
+.cache/
 
-# Testing
+# --- Backend (Python/Flask) ---
+__pycache__/
+*.py[cod]
+*$py.class
+.venv/
+venv/
+ENV/
+env/
+.env
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# --- Logs & Debug ---
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+*.log
+
+# --- Testing ---
 /coverage
+.tox/
+.nox/
+.coverage
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
 
-# Production
-/dist
-/build
-
-# Misc
-.DS_Store
+# --- Environment Variables ---
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-# Editor directories and files
+# --- Editor & OS ---
+.DS_Store
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-
-# Environment variables
-.env
